kubernetes-extension/src/test/resources/kubernetes/hello-deployment/templates/hello.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "hello"
  name: "hello"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "hello"
  type: "NodePort"
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: "nginx"
  finalizers: []
  labels:
    app: "hello"
  name: "helloep-ingress"
  ownerReferences: []
spec:
  rules:
  - host: "abc.com"
    http:
      paths:
      - backend:
          serviceName: "hello"
          servicePort: 9090
        path: "/"
  tls:
  - hosts:
    - "abc.com"
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "hello"
  name: "hello-deployment"
  ownerReferences: []
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "hello"
      ownerReferences: []
    spec:
      containers:
      - args: []
        command: []
        env: []
        envFrom: []
        image: "hello:latest"
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 9090
        name: "hello-deployment"
        ports:
        - containerPort: 9090
          protocol: "TCP"
        volumeMounts:
        - mountPath: "/ballerina/runtime/bre/security"
          name: "helloep-keystore-volume"
          readOnly: true
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes:
      - name: "helloep-keystore-volume"
        secret:
          items: []
          secretName: "helloep-keystore"
